--- a/libraryManagment/src/main/resources/templates/employee/employee-book-saved.html
+++ b/libraryManagment/src/main/resources/templates/employee/employee-book-saved.html
@@ -12,7 +12,7 @@
 		<br/>
 		<div class="row">
 			<div class="col-50"> 
-				<form th:action="@{/employee/books}">
+				<form th:action="@{/employee/books/showbooks}">
 					<input type="submit" value="Go back">	
 				</form>
 			</div>
