--- a/libraryManagment/src/main/resources/templates/employee/employee-change-book-info.html
+++ b/libraryManagment/src/main/resources/templates/employee/employee-change-book-info.html
@@ -48,15 +48,15 @@
 					<input type="number" th:value="${book.releaseYear}" th:field="${book.releaseYear}" required="required"/>
 				</div>
 			</div>
-			
-			<div class="row">
-				<div class="col-50">
-					<label>Edition:</label>
-				</div>
-				<div class="col-75">
-					<input type="number" th:value="${book.edition}" th:field="${book.edition}" required="required"/>
-				</div>
-			</div>
+<!--			-->
+<!--			<div class="row">-->
+<!--				<div class="col-50">-->
+<!--					<label>Edition:</label>-->
+<!--				</div>-->
+<!--				<div class="col-75">-->
+<!--					<input type="number" th:value="${book.edition}" th:field="${book.edition}" required="required"/>-->
+<!--				</div>-->
+<!--			</div>-->
 			
 			<div class="row">
 				<div class="col-50">
