--- a/libraryManagment/src/main/resources/templates/employee/employee-confirm-returned-books.html
+++ b/libraryManagment/src/main/resources/templates/employee/employee-confirm-returned-books.html
@@ -50,7 +50,7 @@
 				<td th:text="${book.title}"></td>
 				<td th:text="${book.author}"></td>
 				<td th:text="${book.releaseYear}"></td>
-				<td th:text="${book.edition}"></td>
+<!--				<td th:text="${book.edition}"></td>-->
 			</tr>
 		</table>
 		
