--- a/libraryManagment/src/main/resources/templates/employee/employee-delete-book.html
+++ b/libraryManagment/src/main/resources/templates/employee/employee-delete-book.html
@@ -43,9 +43,9 @@
 			<div class="col-50">
 				<label>Edition:</label>
 			</div>
-			<div class="col-75">
-				<label th:text="${deleteBook.edition}"></label>
-			</div>
+<!--			<div class="col-75">-->
+<!--				<label th:text="${deleteBook.edition}"></label>-->
+<!--			</div>-->
 		</div>
 		
 		<div class="row">
