--- a/libraryManagment/src/main/resources/templates/employee/employee-reservation-ready-for-pick-up.html
+++ b/libraryManagment/src/main/resources/templates/employee/employee-reservation-ready-for-pick-up.html
@@ -38,14 +38,14 @@
 			</div>
 		</div>
 		
-		<div class="row">
-			<div class="col-50">
-				Edition
-			</div>
-			<div class="col-75">
-				<text th:text="${book.edition}"></text>
-			</div>
-		</div>
+<!--		<div class="row">-->
+<!--			<div class="col-50">-->
+<!--				Edition-->
+<!--			</div>-->
+<!--			<div class="col-75">-->
+<!--				<text th:text="${book.edition}"></text>-->
+<!--			</div>-->
+<!--		</div>-->
 		
 		<p><b><text th:text="${user.firstName + ' ' + user.lastName}"></b> will receive a notification.</p>
 	
