--- a/libraryManagment/src/main/resources/templates/employee/employee-reservations.html
+++ b/libraryManagment/src/main/resources/templates/employee/employee-reservations.html
@@ -21,7 +21,7 @@
 					<th>Title</th>
 					<th>Author</th>
 					<th>Release Year</th>
-					<th>Edition</th>
+<!--					<th>Edition</th>-->
 					<th>Reserved by</th>
 					<th>Reserved Until</th>
 					<th style="width: 260px">Ready for Pick Up</th>
@@ -30,7 +30,7 @@
 					<td th:text="${book.title}"></td>
 					<td th:text="${book.author}"></td>
 					<td th:text="${book.releaseYear}"></td>
-					<td th:text="${book.edition}"></td>
+<!--					<td th:text="${book.edition}"></td>-->
 					<td th:text="${book.reservedByUser.firstName + ' ' + book.reservedByUser.lastName}"></td>
 					<td th:text="${book.endReservationDate}"></td>
 					<td>
@@ -56,7 +56,7 @@
 					<th>Title</th>
 					<th>Author</th>
 					<th>Release Year</th>
-					<th>Edition</th>
+<!--					<th>Edition</th>-->
 					<th>Reserved by</th>
 					<th>Reserved Until</th>
 				</tr>
@@ -64,7 +64,7 @@
 					<td th:text="${book.title}"></td>
 					<td th:text="${book.author}"></td>
 					<td th:text="${book.releaseYear}"></td>
-					<td th:text="${book.edition}"></td>
+<!--					<td th:text="${book.edition}"></td>-->
 					<td th:text="${book.reservedByUser.firstName + ' ' + book.reservedByUser.lastName}"></td>
 					<td th:text="${book.endReservationDate}"></td>
 				</tr>
