--- a/libraryManagment/src/main/resources/templates/employee/employee-new-book.html
+++ b/libraryManagment/src/main/resources/templates/employee/employee-new-book.html
@@ -43,12 +43,12 @@
 				</div>
 				
 				<div class="row">
-					<div class="col-50">
-						<label for="edition">Edition</label>
-					</div>
-					<div class="col-75">
-						<input type="number" id="edition" name="edition" th:field="${book.edition}" required="required">
-					</div>
+<!--					<div class="col-50">-->
+<!--						<label for="edition">Edition</label>-->
+<!--					</div>-->
+<!--					<div class="col-75">-->
+<!--						<input type="number" id="edition" name="edition" th:field="${book.edition}" required="required">-->
+<!--					</div>-->
 				</div>
 				
 				<div class="row">
