--- a/libraryManagment/src/main/resources/templates/user/user-your-reservations.html
+++ b/libraryManagment/src/main/resources/templates/user/user-your-reservations.html
@@ -18,7 +18,7 @@
 				<th>Title</th>
 				<th>Author</th>
 				<th>Release Year</th>
-				<th>Edition</th>
+<!--				<th>Edition</th>-->
 				<th>Reserved From</th>
 				<th>Reserved Until</th>
 			</tr>
@@ -26,7 +26,7 @@
 				<td th:text="${book.title}"></td>
 				<td th:text="${book.author}"></td>
 				<td th:text="${book.releaseYear}"></td>
-				<td th:text="${book.edition}"></td>
+<!--				<td th:text="${book.edition}"></td>-->
 				<td th:text="${book.startReservationDate}"></td>
 				<td th:text="${book.endReservationDate}"></td>	
 			</tr>
