--- a/libraryManagment/src/main/resources/templates/user/user-your-books.html
+++ b/libraryManagment/src/main/resources/templates/user/user-your-books.html
@@ -18,7 +18,7 @@
 					<th>Title</th>
 					<th>Author</th>
 					<th>Release Year</th>
-					<th>Edition</th>
+<!--					<th>Edition</th>-->
 					<th>Return Date</th>
 					<th>Fine</th>
 					<th>Times Extended</th>
@@ -29,7 +29,7 @@
 					<td th:text="${book.key.title}"></td>
 					<td th:text="${book.key.author}"></td>
 					<td th:text="${book.key.releaseYear}"></td>
-					<td th:text="${book.key.edition}"></td>
+<!--					<td th:text="${book.key.edition}"></td>-->
 					<td th:text="${book.key.returnDate}"></td>
 					<td th:if="${book.value > 0}" style="color:red"  th:text="${'$ ' + book.value}"></td>
 					<td th:if="${book.value == 0}" th:text="${'$ ' + book.value}"></td>
